examples/test/testpolicy13049.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13049
  namespace: namespace484
spec:
  podSelector:
    matchLabels:
      key42: value16
      key22: value29
      key21: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value7
      podSelector:
        matchLabels:
          key13: value0
          key8: value23
